<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagem1"
    tools:context="com.example.kevin.gameofmata.MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="148dp"
        android:layout_height="51dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/criar_grupo_de_jogadores"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Criar grupo de jogadores:" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorAccent"
        app:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@android:color/background_light"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/start"
        android:layout_width="49dp"
        android:layout_height="50dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="startSecondActivity"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@android:color/background_light"
        app:srcCompat="@android:drawable/ic_media_play" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/remove"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:rippleColor="@color/white"
        app:srcCompat="@android:drawable/bottom_bar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/darker_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:text="@string/newPlayer"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/newName"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:text="@string/ballNum"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        style="@android:style/Widget.Holo.Light.ScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/colunaPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:id="@+id/playerRow"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:text="@string/jogador_1"
                    tools:layout_editor_absoluteX="28dp"
                    tools:layout_editor_absoluteY="206dp"
                    tools:text="Jogador 1" />

                <EditText
                    android:id="@+id/editText8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="101dp"
                    tools:layout_editor_absoluteY="143dp" />

                <NumberPicker
                    android:id="@+id/numbPicker7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.2"
                    tools:layout_editor_absoluteX="259dp"
                    tools:layout_editor_absoluteY="143dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:text="@string/jogador_2"
                    tools:layout_editor_absoluteX="28dp"
                    tools:layout_editor_absoluteY="206dp"
                    tools:text="Jogador 2" />

                <EditText
                    android:id="@+id/editText9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/name1"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="101dp"
                    tools:layout_editor_absoluteY="206dp" />

                <NumberPicker
                    android:id="@+id/numbPicker8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.2"
                    tools:layout_editor_absoluteX="259dp"
                    tools:layout_editor_absoluteY="206dp" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/shuffleButton"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="80dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/remove"
        app:rippleColor="@color/white"
        app:srcCompat="@android:drawable/ic_menu_rotate" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:onClick="loadSavedGame"
        android:layout_width="49dp"
        android:layout_height="48dp"
        android:layout_marginEnd="68dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/start"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/white"
        app:srcCompat="@android:drawable/stat_sys_download" android:focusable="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/iniciar_novo_jogo"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="1dp"
        android:text="@string/iniciar_jogo_antigo"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="54dp"
        android:text="@string/bolas_aleat_rias"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/shuffleButton" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:text="@string/remover"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/remove" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/adicionar"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

</android.support.constraint.ConstraintLayout>
